--- a/src/app/view-all-employee/view-all-employee.component.html
+++ b/src/app/view-all-employee/view-all-employee.component.html
@@ -1,1 +1,83 @@
-
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">SI.No.</th>
+        <th scope="col">Name</th>
+        <th scope="col">Employee Code</th>
+        <th scope="col">Designation</th>
+        <th scope="col">Year of experience</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>2345</td>
+        <td>Trainee</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>2435</td>
+        <td>Junior Engineer</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>James</td>
+        <td>2368</td>
+        <td>Assistant Engineer</td>
+        <td>2.5</td>
+      </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Thomas</td>
+        <td>2568</td>
+        <td>Junior Engineer</td>
+        <td>1.5</td>
+      </tr>
+      <tr>
+        <th scope="row">5</th>
+        <td>Samson</td>
+        <td>2765</td>
+        <td>Senior Engineer</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <th scope="row">6</th>
+        <td>Diya</td>
+        <td>2954</td>
+        <td>Executive Engineer</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <th scope="row">7</th>
+        <td>Priya</td>
+        <td>2653</td>
+        <td>Junior Engineer</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <th scope="row">8</th>
+        <td>Praveen</td>
+        <td>2642</td>
+        <td>Project Manager</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <th scope="row">9</th>
+        <td>Joel</td>
+        <td>2875</td>
+        <td>Senior Engineer</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <th scope="row">10</th>
+        <td>Sara</td>
+        <td>2586</td>
+        <td>Assistant Engineer</td>
+        <td>2</td>
+      </tr>
+    </tbody>
+  </table>
