--- a/src/app/navigaion/navigaion.component.html
+++ b/src/app/navigaion/navigaion.component.html
@@ -6,12 +6,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/">Add Employee</a>
-          <a class="nav-link" href="/search">Search Employee</a>
-          <a class="nav-link" href="/delete">Delete Employee</a>
-          <a class="nav-link" href="/edit">Edit Employee</a>
-          <a class="nav-link" href="/viewall">View All Employee</a>
-          <a class="nav-link" href="/">Logout</a>
+          <a class="nav-link" routerLink="/add">Add Employee</a>
+          <a class="nav-link" routerLinkf="/search">Search Employee</a>
+          <a class="nav-link" routerLink="/delete">Delete Employee</a>
+          <a class="nav-link" routerLinkf="/edit">Edit Employee</a>
+          <a class="nav-link" routerLink="/viewall">View All Employee</a>
+          <a class="nav-link" routerLink="/">Logout</a>
         </div>
       </div>
     </div>
