--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,4 +1,4 @@
-<app-navigation></app-navigation>
+<app-navigaion></app-navigaion>
   <div class="container">
     <div class="row">
         <h1>Administrator Login</h1>
