--- a/src/app/navigaion/navigaion.component.html
+++ b/src/app/navigaion/navigaion.component.html
@@ -7,9 +7,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" routerLink="/add">Add Employee</a>
-          <a class="nav-link" routerLinkf="/search">Search Employee</a>
+          <a class="nav-link" routerLink="/search">Search Employee</a>
           <a class="nav-link" routerLink="/delete">Delete Employee</a>
-          <a class="nav-link" routerLinkf="/edit">Edit Employee</a>
+          <a class="nav-link" routerLink="/edit">Edit Employee</a>
           <a class="nav-link" routerLink="/viewall">View All Employee</a>
           <a class="nav-link" routerLink="/">Logout</a>
         </div>
