--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -40,6 +40,9 @@
                     <label for="" class="form-label">Year of experience</label>
                     <input type="text" class="form-control">
                 </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <button class="btn btn-success">Add Employee</button>
+                </div>
             </div>
         </div>
     </div>
