--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,4 +1,3 @@
-<app-navigaion></app-navigaion>
   <div class="container">
     <div class="row">
         <h1>Administrator Login</h1>
@@ -13,7 +12,7 @@
                     <input type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <a href="http://" class="btn btn-success"> Login</a>
+                    <a href="/add" class="btn btn-success"> Login</a>
                 </div>
                 </div>
             </div>
